# django-rest-framework-jwk

./: .gitignore  .travis.yml  LICENSE  README.md  manage.py  mkdocs.yml  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
docs/: index.md
rest_framework_jwk/: admin.py  algorithms.py  apps.py  cache.py  exceptions.py  jwt.py  models.py  settings.py  urls.py  utils.py  views.py
rest_framework_jwk/management/commands/: rotatejwk.py
rest_framework_jwk/migrations/: 0001_initial.py
tests/: conftest.py  test_utils.py
